results/SVCOMP/conversational/log-StaticCharMethods01-2024_03_15_16_35_44.txt
/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/jbmc-strings/StaticCharMethods01
 * The benchmark was taken from the repo: 24 January 2018
 */
public class StaticCharMethods01 {
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
    public static boolean f() {
        char c = 0;
        if(Character.isDefined(c) == false) return false;
        if(Character.isDigit(c) == true) return false;
        if(Character.isJavaIdentifierStart(c) == true) return false;
        if(Character.isJavaIdentifierPart(c) == false) return false;
        if(Character.isLetter(c) == true) return false;
        if(Character.isLetterOrDigit(c) == true) return false;
        if(Character.isLowerCase(c) == true) return false;
        if(Character.isUpperCase(c) == true) return false;
        if (Character.toUpperCase(c) != Character.toLowerCase(c)) return false;
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                   ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                           ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                                                                  ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                                                                                                       ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                                                                                                                                 ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                                                                                                                                                                  ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                                                                                                                                                                                               ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                                                                                                                                                                                                                            ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                                                                                                                                                                                                                                                        ^
  symbol:   variable c
  location: class StaticCharMethods01
/home/max/Documents/JMLGPT/tmp/StaticCharMethods01.java:10: error: cannot find symbol
    //@ ensures \result <==> (!Character.isDefined(c) || Character.isDigit(c) || !Character.isJavaIdentifierStart(c) || Character.isJavaIdentifierPart(c) || !Character.isLetter(c) || !Character.isLetterOrDigit(c) || !Character.isLowerCase(c) || !Character.isUpperCase(c) || Character.toUpperCase(c) == Character.toLowerCase(c));
                                                                                                                                                                                                                                                                                                                                    ^
  symbol:   variable c
  location: class StaticCharMethods01
10 errors

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/jbmc-strings/StaticCharMethods01
 * The benchmark was taken from the repo: 24 January 2018
 */
public class StaticCharMethods01 {
    //@ ensures \result <==> (!Character.isDefined(0) || Character.isDigit(0) || !Character.isJavaIdentifierStart(0) || Character.isJavaIdentifierPart(0) || !Character.isLetter(0) || !Character.isLetterOrDigit(0) || !Character.isLowerCase(0) || !Character.isUpperCase(0) || Character.toUpperCase(0) == Character.toLowerCase(0));
    public static boolean f() {
        char c = 0;
        if(Character.isDefined(c) == false) return false;
        if(Character.isDigit(c) == true) return false;
        if(Character.isJavaIdentifierStart(c) == true) return false;
        if(Character.isJavaIdentifierPart(c) == false) return false;
        if(Character.isLetter(c) == true) return false;
        if(Character.isLetterOrDigit(c) == true) return false;
        if(Character.isLowerCase(c) == true) return false;
        if(Character.isUpperCase(c) == true) return false;
        if (Character.toUpperCase(c) != Character.toLowerCase(c)) return false;
        return true;
    }
}
